Reduced JVM size in docker image